--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "raven",
     "title": "Raven",
-    "description": "Dark color scheme based on the Dreamweaver CC 2015 Raven theme.",
+    "description": "Dark color scheme based on Dreamweaver CC's Raven theme.",
     "homepage": "https://github.com/JTruax/brackets-theme-raven.git",
-    "version": "1.0.6",
+    "version": "1.0.4",
     "author": "Justin Truax (http://justintruax.com)",
     "license": "MIT",
     "theme": {
